@@ -2,6 +2,7 @@ Version 3.1.1 To be released
 ============================
 BUG: Ticket#656 - TDatePicker does not return correct value when in callback mode (Christophe)
 BUG: Ticket#662 - Ensure TForm to properly encode the ampersand in action URL (Qiang)
+BUG: Ticket#666 - TActiveRecord::deleteAll() method always requires a criteria or null parameter (Qiang)
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
 ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
 ENH: Added THead requirement check (Qiang)
